# dotfiles

./: .gitignore  AGENTS.md  dotfiles.toml  init.lua  lazy-lock.json
.zed/: settings.json
fish/: config.fish  fish_plugins
ghostty/: config
matugen/: config.toml
matugen/templates/: starship-colors.toml  zed-custom.json
matugen/templates/neovim/: template.lua
nvim/: .gitignore  init.lua
nvim/colors/: matugen.vim
nvim/lua/plugins/: dankcolors.lua
opencode/: opencode.jsonc
opencode/agent/: architect.md  engineer.md  librarian.md  oracle.md  peer.md  researcher.md  reviewer.md  scribe.md  worker.md
opencode/plugins/custom-utils/: index.ts  tsconfig.json
scripts/: README.md  sync-config.json  sync_dotfiles.sh
starship/: starship.toml
tmux/: generated.conf  tmux.conf
utils/: README.md  pyproject.toml
utils/dotfiles/: __init__.py  backup.py  cli.py  config.py  filters.py  logging_utils.py  path_utils.py  sync.py  wallpaper.py
utils/tests/: conftest.py  test_backup.py  test_cli.py  test_config.py  test_filters.py  test_logging_utils.py  test_path_utils.py  test_sync.py  test_wallpaper.py
zed/: .gitignore  settings.jsonc
