[project]
name = "dotfile-utils"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.15",
    "rich>=13",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
dotfiles = "dotfiles.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dotfiles"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = "test_*.py"
